--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./styles.css" class="rel"> -->
+    <!-- <link rel="stylesheet" href="./styles.css" class="rel"-->
     <title>Player</title>
 </head>
 
@@ -29,7 +29,7 @@
         </div>
         <div class="box" id="top"></div>
         <div class="box" id="bottom"></div>
-        <!-- <script src="./index.js"></script> -->
+        <script src="./js/index.js"></script>
 </body>
 
 </html>
